Z index of header changed to 2 for stories z-index bugfix.

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ header {
     height: 54px;
 
     position: fixed;
+    z-index: 2;
     top: 0px;
     left: 0px;
 
